# serverless-functions-python

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup-poetry/: action.yml
.github/workflows/: pytest.yml  python-publish.yml  report.yml
docs/: CONTRIBUTING.md
examples/: mirror.py  multiple_handlers.py
scaleway_functions_python/: __init__.py
scaleway_functions_python/framework/v1/: __init__.py  hints.py
scaleway_functions_python/local/: __init__.py  event.py  infra.py  serving.py
scaleway_functions_python/testing/: __init__.py  context.py  event.py  infra.py  serving.py
src/framework/hints/: __init__.py  v1.py
src/scaleway_functions_python/: __init__.py
src/testing/: context.py  event.py  infra.py  serving.py
tests/: handlers.py  test_fake.py
tests/test_local/: test_event.py  test_serving.py
tests/test_testing/: test_event.py  test_server.py  test_serving.py
