[tool.poetry]
name = "serverless-functions-python"
version = "0.1.0"
description = ""
authors = ["Scaleway Serverless Team <opensource@scaleway.com>"]
readme = "README.md"
packages = [{ include = "serverless_functions_python", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
typing-extensions = { version = "^4.4.0", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
autoflake = "^1.7.7"
black = "^23.01.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
pre-commit = "^3.0.4"
pylint = "^2.16.2"
pylint-per-file-ignores = "^1.2.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# addopts = ["--import-mode=importlib"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pylint]
load-plugins = ["pylint_per_file_ignores"]
disable = "missing-module-docstring"
# Commented Black formatted code.
max-line-length = 89
# Short and common names. e is commonly used for exceptions.
good-names = "i,fp,e"

[tool.pylint-per-file-ignores]
# Redfined outer name is for pytest fixtures
"/tests/" = "missing-class-docstring,missing-function-docstring,protected-access,redefined-outer-name"

[tool.isort]
profile = "black"

[tool.pydocstyle]
# Compatible with Sphinx
convention = "google"
add_ignore = ["D100", "D104", "D107"]
