[tool.poetry]
name = "serverless-functions-python"
version = "0.1.0"
description = "Framework to provide a good developer experience when writing Serverless Functions in Python."
authors = ["Scaleway Serverless Team <opensource@scaleway.com>"]

readme = "README.md"
license = "MIT"
repository = "https://github.com/scaleway/serverless-functions-python"

keywords = ["serverless", "scaleway", "functions", "cloud", "faas"]

# Should be one of:
# "Development Status :: 3 - Alpha"
# "Development Status :: 4 - Beta"
# "Development Status :: 5 - Production/Stable"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

packages = [
    { include = "framework", from = "src" },
    { include = "testing", from = "src" },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
typing-extensions = { version = "^4.4.0", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
autoflake = "^1.7.7"
black = "^23.01.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
pre-commit = "^3.0.4"
pylint = "^2.16.2"
pylint-per-file-ignores = "^1.2.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pylint]
load-plugins = ["pylint_per_file_ignores"]
disable = "missing-module-docstring"
# Commented Black formatted code.
max-line-length = 89
# Short and common names. e is commonly used for exceptions.
good-names = "i,fp,e"

[tool.pylint-per-file-ignores]
# Redfined outer name is for pytest fixtures
"/tests/" = "missing-class-docstring,missing-function-docstring,protected-access,redefined-outer-name"

[tool.isort]
profile = "black"

[tool.pydocstyle]
# Compatible with Sphinx
convention = "google"
add_ignore = ["D100", "D104", "D107"]
