[tool.poetry]
name = "scaleway-functions-python"
version = "0.1.0"
description = "Utilities for testing your Python handlers for Scaleway Serverless Functions."
authors = ["Scaleway Serverless Team <opensource@scaleway.com>"]

readme = "README.md"
license = "MIT"
repository = "https://github.com/scaleway/serverless-functions-python"

keywords = ["serverless", "scaleway", "functions", "cloud", "faas"]

# Should be one of:
# "Development Status :: 3 - Alpha"
# "Development Status :: 4 - Beta"
# "Development Status :: 5 - Production/Stable"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = ">=3.8.1, <3.12"
flask = "^2.2.2"
typing-extensions = { version = "^4.4.0", python = "<3.11" }

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
autoflake = "^1.7.7"
black = "^23.01.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
pre-commit = "^3.0.4"
pylint = "^2.16.2"
pylint-per-file-ignores = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pylint]
load-plugins = ["pylint_per_file_ignores"]
disable = "missing-module-docstring"
# Commented Black formatted code.
max-line-length = 89
# Short and common names. e is commonly used for exceptions.
good-names = "i,e"

[tool.pylint-per-file-ignores]
# Import aliases are prefered over unused imports or __all__
"__init__.py" = "useless-import-alias"
# Redefined outer name is for pytest fixtures
"/tests/" = "missing-class-docstring,missing-function-docstring,protected-access,redefined-outer-name"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
strict = true
exclude = "tests"

[tool.pydocstyle]
# Compatible with Sphinx
convention = "google"
add_ignore = ["D100", "D104", "D107"]
